--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,27 @@
 aiohttp==3.7.3
-async-timeout==3.0.1
-attrs==20.3.0
+async-timeout==3.0.1 
+attrs==20.3.0        
+autopep8==1.5.5      
+beautifulsoup4==4.9.3
+bs4==0.0.1
+certifi==2020.12.5
 chardet==3.0.4
+click==7.1.2
 discord.py==1.6.0
-idna==3.1
+idna==2.10
+joblib==1.0.1
+jokeapi==0.2.8
 multidict==5.1.0
-python-dotenv==0.15.0
+nltk==3.5
+pycodestyle==2.6.0
+python-dotenv==0.13.0
+regex==2020.11.13
+requests==2.25.1
+simplejson==3.17.0
+soupsieve==2.2
+toml==0.10.2
+tqdm==4.57.0
 typing-extensions==3.7.4.3
+urllib3==1.25.8
+urlopen==1.0.0
 yarl==1.6.3
